Configured complete spring security for REST calls. Added roleName in AppUser for future purpose.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Wed Oct 16 15:34:54 PDT 2013
-#Wed Oct 16 15:34:54 PDT 2013
+#Updated at Wed Nov 27 15:09:22 PST 2013
+#Wed Nov 27 15:09:22 PST 2013
 application_name=Backend
 label_com_softrism_sencha_backend_domain_appuser=App User
 label_com_softrism_sencha_backend_domain_appuser_firstname=First Name
@@ -7,6 +7,7 @@ label_com_softrism_sencha_backend_domain_appuser_id=Id
 label_com_softrism_sencha_backend_domain_appuser_lastname=Last Name
 label_com_softrism_sencha_backend_domain_appuser_password=Password
 label_com_softrism_sencha_backend_domain_appuser_plural=App Users
+label_com_softrism_sencha_backend_domain_appuser_rolename=Role Name
 label_com_softrism_sencha_backend_domain_appuser_useremail=User Email
 label_com_softrism_sencha_backend_domain_appuser_userid=Userid
 label_com_softrism_sencha_backend_domain_appuser_version=Version
